feat: Add automated daily room cleaning status reset system
Implemented a comprehensive automated system to mark rooms as "dirty"
(needs cleaning) at 7:00 AM Europe/Zagreb time if they were occupied
the previous day. This ensures housekeeping staff know which rooms need
attention each morning.

Features:
- PostgreSQL function `reset_daily_room_cleaning()` to reset room status
- pg_cron job scheduled at 5:00 AM UTC (7:00 AM Zagreb DST)
- Audit log table `room_cleaning_reset_log` for tracking executions
- Supabase Edge Function for manual triggering
- Admin Testing page with trigger button and execution history
- Real-time UI updates via Supabase subscriptions

Technical Details:
- Database migration with pg_cron integration
- Edge Function deployed: `/functions/v1/reset-room-cleaning`
- JWT authentication enabled for manual triggers
- Comprehensive error handling and logging

Bug Fix:
- Fixed column name mismatch: `is_cleaned` → `is_clean`
- Updated RoomCleaningService.ts (9 occurrences)
- Updated TypeScript types in supabase.ts
- Updated database function after migration

Components:
- Added AdminTestingPage component with loading states
- Added Alert UI component (shadcn/ui style)
- Added sidebar navigation item with TestTube icon
- Added translation key: navigation.adminTesting

Documentation:
- ROOM_CLEANING_AUTOMATION.md: Comprehensive technical docs
- ROOM_CLEANING_AUTOMATION_SUMMARY.md: Quick overview and how-to

Route: /admin/testing
Function: reset_daily_room_cleaning(trigger_source)
Schedule: Daily at 7:00 AM Europe/Zagreb (5:00 AM UTC)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,6 +6,7 @@
     "orders": "Orders",
     "globalView": "Global View",
     "settings": "Settings",
+    "adminTesting": "Admin Testing",
     "moduleSelector": "Hotel Modules",
     "locationManagement": "Location Management",
     "auditLogs": "Audit Logs",
